<resources>
    <string name="app_name">Obstacle Race</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="zero">0</string>
    <string name="btn_start_game">Start Game</string>
    <string name="param_gameMode">gameMode</string>
    <string name="use_buttons_lbl">Buttons Mode</string>
    <string name="display_records">Display Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_location">Please Enter Location</string>
    <string name="send">Send</string>
    <string name="records_col_coins">• Coins: </string>
    <string name="records_col_distance">• Distance: </string>
    <string name="records_col_mode">• Mode: </string>
    <string name="records_col_date">• Date: </string>
    <string name="records_displayLocation">Display Location</string>
</resources>