<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/record_LBL_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/records_col_coins"
            android:textColor="@color/black"
            android:textSize="@dimen/default_string_size"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/record_LBL_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/records_col_distance"
            android:textColor="@color/black"
            android:textSize="@dimen/default_string_size"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/record_LBL_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/records_col_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/default_string_size"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/record_LBL_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/records_col_date"
            android:textColor="@color/black"
            android:textSize="@dimen/default_string_size"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/display_location_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/records_displayLocation"
            android:textSize="@dimen/default_string_size" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>